# slideshow-maker

./: .env.example  README.md  composer.json  package-lock.json
analyzer/: pyproject.toml
analyzer/src/analyzer/: cli.py  frames.py  music.py  video.py
app/Http/Controllers/: FileBrowserController.php  ProjectController.php  UploadController.php
app/Jobs/: AddSourceVideos.php  AnalyzeMusic.php  RenderProject.php  RunPipeline.php
app/Jobs/Concerns/: PreparesSourceVideos.php
app/Models/: PipelineStep.php  Project.php  Segment.php  SourceVideo.php
app/Services/: AnalyzerClient.php  EditPlanner.php  Ffmpeg.php  RenderService.php
bootstrap/: app.php
config/: slideshow.php
database/migrations/: 2026_07_04_092505_create_projects_table.php  2026_07_04_092505_create_source_videos_table.php  2026_07_04_092506_create_pipeline_steps_table.php  2026_07_04_092506_create_segments_table.php  2026_07_04_110000_add_trim_workflow_columns.php  2026_07_05_110455_add_keep_audio_to_segments_table.php
resources/js/components/: file-browser.tsx  trim-studio.tsx
resources/js/layouts/: shell.tsx
resources/js/lib/: upload.ts
resources/js/pages/projects/: create.tsx  index.tsx  show.tsx  types.ts
routes/: web.php
tests/Feature/: EditPlannerTest.php
