[project]
name = "analyzer"
version = "0.1.0"
description = "Video/music analysis CLIs for the slideshow maker"
requires-python = ">=3.11"
dependencies = [
    "opencv-python-headless>=4.9",
    "scenedetect>=0.6.4",
    "librosa>=0.10",
    "numpy>=1.26",
    "anthropic>=0.92",
    "soundfile>=0.12",
    "audioread>=3.0",
]

[project.scripts]
analyzer = "analyzer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analyzer"]
